Added the Email service that utilizes the Azure service bus as a message broker. Them EmailService would be used to send Welcome Emails for each and every registered new User.

--- a/SafariAuthService/appsettings.json
+++ b/SafariAuthService/appsettings.json
@@ -13,5 +13,8 @@
     "SecretKey": "poeiuwytd609poeiwufdt",
     "Issuer": "EventMangementSystem",
     "Audience": "TicketHolders"
+  },
+  "ServiceBus": {
+    "registration": "registerusers"
   }
 }
