Added the Hotel Service where I'm able to add a hotel based on the existence of a Tour . I used synchronous communication between the services to get the tour that already exists .

--- a/HotelService/appsettings.json
+++ b/HotelService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;User Id=sa;Password=T33nwo!f;Database=SafariMSauth;TrustServerCertificate=True;"
+    "SqlServer": "Server=localhost,1433;User Id=sa;Password=T33nwo!f;Database=SafariMSHotel;TrustServerCertificate=True;"
   },
   "JWToptions": {
     "SecretKey": "poeiuwytd609poeiwufdt",
@@ -16,5 +16,8 @@
   },
   "ServiceBus": {
     "registration": "registerusers"
+  },
+  "ServiceUrls": {
+    "tourservice": "http://localhost:5176/api/Tours/"
   }
 }
