--- a/ToursService/appsettings.json
+++ b/ToursService/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JWToptions": {
     "SecretKey": "poeiuwytd609poeiwufdt",
-    "Issuer": "EventMangementSystem",
+    "Issuer": "SafariMS",
     "Audience": "TicketHolders"
   }
 }
